--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,7 +7,7 @@
     
     %link{:href=>"css/bootstrap.min.css", :type=>"text/css", :rel=>"stylesheet"}
     %link{:href=>"css/bootstrap-responsive.min.css", :type=>"text/css", :rel=>"stylesheet"}
-
+    %style body { padding-top: 60px; } 
   %body
     %div= haml :navbar
     %div= yield
