--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,8 +5,8 @@
     %meta{:name => "description", :content=>""}
     %meta{:name => "author", :content=>"" }
     
-    %link{:href=>"css/bootstrap.min.css", :type=>"text/css", :rel=>"stylesheet"}
-    %link{:href=>"css/bootstrap-responsive.min.css", :type=>"text/css", :rel=>"stylesheet"}
+    %link{:href=>"http://www.steamrecommender.com/css/bootstrap.min.css", :type=>"text/css", :rel=>"stylesheet"}
+    %link{:href=>"http://www.steamrecommender.com/css/bootstrap-responsive.min.css", :type=>"text/css", :rel=>"stylesheet"}
     %style body { padding-top: 60px; } 
   %body
     %div= haml :navbar
