fixing game page layout

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -1,3 +1,5 @@
 .footer
-	%p
-		&copy; seekerr 2013
+  %p
+    Powered by Steam.  This site is not affiliated with Valve, Steam, or any of their partners.  All copyrights reserved to their respective owners.
+  %p
+    &copy; seekerr 2013
