--- a/views/games.haml
+++ b/views/games.haml
@@ -1,31 +1,31 @@
 .container-fluid
   .row-fluid
-    .span12
+    .span2
+    .span6
       %center 
         %img{:src => "http://cdn2.steampowered.com/v/gfx/apps/#{@game.appid}/header_292x136.jpg", :width=>'200px'}
        
         %h1= @game.title
-        %table
+        %table{:class => 'table'}
           %tr
             %td App Type
             %td= @game.app_type
           %tr 
             %td Metacritic Site
-            %td= @game.metacritic
+            %td
+              %a{:href=> @game.metacritic}= @game.metacritic
           %tr
             %td Giantbomb Site
             %td= @game.giantbomb_id
           %tr
             %td Owned By
             %td= @game.owned
-          %tr
-            %td
       .row-fluid
         .span2 
         .span4
           %center 
             %h3 Total Playtime
-            %table
+            %table{:class => 'table'}
               %tr
                 %td Played Game
                 %td= (@game.owned - @game.not_played) if @game.owned && @game.not_played
@@ -41,7 +41,7 @@
         .span4
           %center
             %h3 Recent Playtime
-            %table
+            %table{:class => 'table'}
               %tr
                 %td Played Recently
                 %td= @game.recent_played || 0
@@ -55,6 +55,5 @@
                 %td Standard Deviation
                 %td= @game.recent_std || 0
         .span2
-    %hr
 
-    %div= haml :footer
+  %div= haml :footer
