--- a/views/layout.haml
+++ b/views/layout.haml
@@ -5,6 +5,7 @@
     %meta{:name => "description", :content=>""}
     %meta{:name => "author", :content=>"" }
     
+    %link{:href=>"http://www.steamrecommender.com/css/pagination.css", :type=>"text/css", :rel=>"stylesheet"}
     %link{:href=>"http://www.steamrecommender.com/css/bootstrap.min.css", :type=>"text/css", :rel=>"stylesheet"}
     %link{:href=>"http://www.steamrecommender.com/css/bootstrap-responsive.min.css", :type=>"text/css", :rel=>"stylesheet"}
     %style body { padding-top: 60px; } 
