--- a/views/index.haml
+++ b/views/index.haml
@@ -1,43 +1,10 @@
 .container-fluid
   .row-fluid
-    .span2
-      %center 
-        %img{:src=>'megaman.jpg', :width=>'200px'}
-    .span10
-      %h1
-        Megaman
+    .span6
+      %h1 Steam Recommender 
       %p
-        This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
-      %p
-        %a.btn.btn-primary.btn-large
-          Learn more &raquo;
-      
-      .row-fluid
-        .span4
-          %h2
-            Heading
-          %p
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-          %p
-            %a.btn{:href => '/'}
-              View Details &raquo;
-        .span4
-          %h2
-            Heading
-          %p
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-          %p
-            %a.btn{:href => '/'}
-              View Details &raquo;
-        .span4
-          %h2
-            Heading
-          %p
-            Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-          %p
-            %a.btn{:href => '/'}
-              View Details &raquo;
-        
-    %hr
+        Welcome to the Steam Recommender website.  This is a work in progress and a place where eventually you will be able to get personalized recommendations for which games to purchase from Steam or which games to play next that you already own.  Check back often as I will be rolling out new features as I have time.
+      %hr
 
-    %div= haml :footer
+  %br
+  %div= haml :footer
