--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -5,14 +5,14 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.brand{:href => '/'} Game Recommender
+      %a.brand{:href => '/'} Steam Recommender
       .nav-collapse
         %ul.nav
           %li
             %a{:href => '/'}Home
           %li
-            %a{:href => '/about'}About
+            %a{:href => '/games'}Games
           %li
-            %a{:href => '/register'}Register
+            %a{:href => '/about'}About
           %li
             %a{:href => '/contact'}Contact
