--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -11,6 +11,8 @@
           %li
             %a{:href => '/'}Home
           %li
+            %a{:href => '/genres'}Genres
+          %li
             %a{:href => '/games'}Games
           %li
             %a{:href => '/about'}About
