first cut at recommendations

--- a/views/recomms_layout.haml
+++ b/views/recomms_layout.haml
@@ -8,7 +8,11 @@
     %link{:href=>"http://www.steamrecommender.com/css/pagination.css", :type=>"text/css", :rel=>"stylesheet"}
     %link{:href=>"http://www.steamrecommender.com/css/bootstrap.min.css", :type=>"text/css", :rel=>"stylesheet"}
     %link{:href=>"http://www.steamrecommender.com/css/bootstrap-responsive.min.css", :type=>"text/css", :rel=>"stylesheet"}
+    %link{:href=>"http://www.steamrecommender.com/css/style.css", :type=>"text/css", :rel=>"stylesheet"}
     
+    %script{:type=>"text/javascript", :src=>"http://www.steamrecommender.com/js/jquery.simplePagination.js"}
+    %script{:type=>"text/javascript", :src=>"http://www.steamrecommender.com/js/jquery-1.10.2.min.js"}
+
     %style body { padding-top: 60px; } 
   %body
     %div= haml :navbar
