Fix the recommendation pages.  Form for calling recomms
Update the navbar to give a location to navigate to and then updated the
presentation of the recommendations done.

--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -11,6 +11,8 @@
           %li
             %a{:href => '/'}Home
           %li
+            %a{:href => '/recomms'}Recommendations
+          %li
             %a{:href => '/genres'}Genres
           %li
             %a{:href => '/games'}Games
