--- a/views/recomms.haml
+++ b/views/recomms.haml
@@ -18,7 +18,7 @@
 
         and tracking down the profile ID (7656119xxxxxxxxx).  With this identifer we are able to see what 
         games you own and what games you have been playing so that we can give you personalized game
-        recommendations.  This only works if your profile is public, as I do not have access to any private
+        recommendations.  This only works if your profile is public, as we do not have access to any private
         information from your profile.
 
       %hr
