--- a/views/recomms_personal.haml
+++ b/views/recomms_personal.haml
@@ -12,18 +12,18 @@
               %h3 Should Buy
           - @recomms.each do |e_game,n_game|
             %tr
-              %td 
-                %a{ :href => "games/#{e_game['appid']}" }= @titles[e_game['appid']]
+              %td
+                %a{ :href => "games/#{e_game['appid']}" }= @games_map[e_game['appid']].title
                 %br
-                %a{ :href => "http://store.steampowered.com/app/#{e_game['appid']}" }
-                  %img{:src => "http://cdn2.steampowered.com/v/gfx/apps/#{e_game['appid']}/header_292x136.jpg", :width=>'150px'}
+                %a{ :href => @games_map[e_game['appid']].steam_url }
+                  %img{:src => @games_map[e_game['appid']].steam_img_url, :width=>'150px'}
                 %br 
                 %a{ :href => "games/#{e_game['appid']}" }= e_game['score']
               %td 
-                %a{ :href => "games/#{n_game['appid']}" }= @titles[n_game['appid']]
+                %a{ :href => "games/#{n_game['appid']}" }= @games_map[n_game['appid']].title
                 %br
-                %a{ :href => "http://store.steampowered.com/app/#{n_game['appid']}" }
-                  %img{:src => "http://cdn2.steampowered.com/v/gfx/apps/#{n_game['appid']}/header_292x136.jpg", :width=>'150px'}
+                %a{ :href => @games_map[n_game['appid']].steam_url }
+                  %img{:src => @games_map[n_game['appid']].steam_img_url, :width=>'150px'}
                 %br 
                 %a{ :href => "games/#{n_game['appid']}" }= n_game['score']
 
