finished the redesign

--- a/views/footer.haml
+++ b/views/footer.haml
@@ -1,5 +1,7 @@
-.footer
+%footer
   %p
     Powered by Steam.  This site is not affiliated with Valve, Steam, or any of their partners.  All copyrights reserved to their respective owners.
+  %p.pull-right
+    %a{ :href => "#" }Back to top
   %p
     &copy; seekerr 2013
