--- a/views/games.haml
+++ b/views/games.haml
@@ -1,7 +1,7 @@
-.container-fluid
-  .row-fluid
-    .span1 
-    .span6
+.container.marketing
+  .row
+    .col-md-1
+    .col-md-10
       %center
         %h2 Steam Games
       %table{:class => 'table'}
@@ -14,5 +14,7 @@
       .flickr_pagination
         = will_paginate @games, :container => false
       %hr
-
-  %div= haml :footer
+  .row
+    .col-md-1
+    .col-md-10
+      %div= haml :footer
