--- a/views/index.haml
+++ b/views/index.haml
@@ -1,10 +1,76 @@
-.container-fluid
-  .row-fluid
-    .span6
-      %h1 Steam Recommender 
-      %p
-        Welcome to the Steam Recommender website.  This is a work in progress and a place where eventually you will be able to get personalized recommendations for which games to purchase from Steam or which games to play next that you already own.  Check back often as I will be rolling out new features as I have time.
-      %hr
+.carousel.slide{ :id => "myCarousel" }
+  %ol.carousel-indicators
+    %li{ "data-target"=>"#myCarousel", "data-slide-to" => "0", "class" => "active" }
+    %li{ "data-target"=>"#myCarousel", "data-slide-to" => "1" }
+    %li{ "data-target"=>"#myCarousel", "data-slide-to" => "2" }
+  .carousel-inner
+    .item.active
+      %img{ :src => "img/payday2-test.png", :alt => "Second Slide" }
+      .container
+        .carousel-caption
+          %h1 Recommendations
+          %p.lead 
+            Let us help you decide what game(s) to purchase next from Steam.  
+            Our recommendations are made based on what games you own and what games you actively play.
+          %a.btn.btn-large.btn-primary{ "href" => "/recomms"} Get Recommendations
+    .item
+      %img{ "data-src"=>"holder.js/auto/#777:#7a7a7a" }
+      .container
+        .carousel-caption
+          %h1 What should I play?
+          %p.lead 
+            Is your Steam library so large that you are not sure what game you should play next?
+            The technology that helps determine what game you should purchase next can also
+            be used to let you know what game you should play next.  
+          %a.btn.btn-large.btn-primary{ "href" => "/recomms"} Get Recommendations
+    .item
+      %img{ "data-src"=>"holder.js/auto/#777:#7a7a7a" }
+      .container
+        .carousel-caption
+          %h1 Steam Game Statistics
+          %p.lead
+            Curious to see how popular a game is?  Interested in knowing how long the average player 
+            invests in a game?  With your help we can gather these statistics and get a deeper look into
+            the game and how much you played compared to the general population.
+          %a.btn.btn-large.btn-primary{ "href" => "/games"} Games
 
-  %br
-  %div= haml :footer
+  %a.left.carousel-control{ :href => "#myCarousel", "data-slide" => "prev"} 
+    %span.glyphicon.glyphicon-chevron-left
+  %a.right.carousel-control{ :href => "#myCarousel", "data-slide" => "next" }
+    %span.glyphicon.glyphicon-chevron-right
+
+.container.marketing
+  .row
+    .col-lg-4
+      %img.img-circle{ "src" => "img/payday2.png" }
+      %h2 FPS
+      %p 
+        So you think you have played every FPS there is to play?  
+        Checkout the recommender and see if there is one that you missed and should try.
+      %p
+        %a.btn{ "href" => "genres/25"}View details &raquo;
+    .col-lg-4
+      %img.img-circle{ "src" => "img/baldurs-gate.png" }
+      %h2 RPG
+      %p 
+        Are you a fan of single player campaigns?  Do you miss spending hours exploring
+        the Temple of Elemental Evil?  See if we can find you some new RPGs to play.
+      %p
+        %a.btn{ "href" => "genres/7"}View details &raquo;
+    .col-lg-4
+      %img.img-circle{ "src" => "img/starcraft2.png" }
+      %h2 RTS
+      %p
+        It may be hard to believe, but there are other popular RTS games besides Starcraft.  Check it out
+        and you may find something new.
+      %p
+        %a.btn{ "href" => "genres/31"}View details &raquo;
+
+  .row
+    .col-md-1
+    .col-md-10
+      %div= haml :footer
+
+%script{ :src => "../js/jquery-1.10.2.min.js" }
+%script{ :src => "../js/bootstrap.js" }
+%script{ :src => "../js/holder.js" }
