--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -1,22 +1,22 @@
-.navbar.navbar-fixed-top
-  .navbar-inner
-    .container-fluid
-      %a.btn.btn-navbar{ "data-toggle".to_sym => "collapse", "data-target".to_sym => ".nav-collapse"}
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
-      %a.brand{:href => '/'} Steam Recommender
-      .nav-collapse
-        %ul.nav
-          %li
-            %a{:href => '/'}Home
-          %li
-            %a{:href => '/recomms'}Recommendations
-          %li
-            %a{:href => '/genres'}Genres
-          %li
-            %a{:href => '/games'}Games
-          %li
-            %a{:href => '/about'}About
-          %li
-            %a{:href => '/contact'}Contact
+.navbar-wrapper
+  .container
+    .navbar.navbar-inverse.navbar-static-top
+      .container
+        .navbar-header
+          %button.navbar-toggle{ "type" => "button", "data-toggle" => "collapse", "data-target" => ".navbar-collapse"}
+            %span.icon-bar
+            %span.icon-bar
+            %span.icon-bar
+          %a.navbar-brand{:href => '/'} Steam Recommender
+        .navbar-collapse.collapse
+          %ul.nav.navbar-nav
+            %li
+              %a{:href => '/recomms'}Recommendations
+            %li
+              %a{:href => '/genres'}Genres
+            %li
+              %a{:href => '/games'}Games
+            %li
+              %a{:href => '/about'}About
+            %li
+              %a{:href => '/contact'}Contact
