--- a/views/footer.haml
+++ b/views/footer.haml
@@ -1,6 +1,7 @@
 %footer
   %p
-    Powered by Steam.  This site is not affiliated with Valve, Steam, or any of their partners.  All copyrights reserved to their respective owners.
+    %a{ :href => "www.steampowered.com" } Powered by Steam.  
+    This site is not affiliated with Valve, Steam, or any of their partners.  All copyrights reserved to their respective owners.
   %p.pull-right
     %a{ :href => "#" }Back to top
   %p
