--- a/views/index.haml
+++ b/views/index.haml
@@ -5,7 +5,7 @@
     %li{ "data-target"=>"#myCarousel", "data-slide-to" => "2" }
   .carousel-inner
     .item.active
-      %img{ :src => "img/payday2-test.png", :alt => "Second Slide" }
+      %img{ :src => "img/game-alt.png", :alt => "Second Slide" }
       .container
         .carousel-caption
           %h1 Recommendations
@@ -14,7 +14,7 @@
             Our recommendations are made based on what games you own and what games you actively play.
           %a.btn.btn-large.btn-primary{ "href" => "/recomms"} Get Recommendations
     .item
-      %img{ "data-src"=>"holder.js/auto/#777:#7a7a7a" }
+      %img{ :src => "img/game2.png", :alt => "First Slide" } 
       .container
         .carousel-caption
           %h1 What should I play?
@@ -24,7 +24,7 @@
             be used to let you know what game you should play next.  
           %a.btn.btn-large.btn-primary{ "href" => "/recomms"} Get Recommendations
     .item
-      %img{ "data-src"=>"holder.js/auto/#777:#7a7a7a" }
+      %img{ :src => "img/game3.png", :alt => "Third Slide" }
       .container
         .carousel-caption
           %h1 Steam Game Statistics
