--- a/public/css/carousel.css
+++ b/public/css/carousel.css
@@ -37,13 +37,15 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
-  background-color: #777;
+  background-color: #000;
 }
 .carousel-inner > .item > img {
-  position: absolute;
+  /*position: absolute;*/
   top: 0;
   left: 0;
-  min-width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  /*min-width: 100%;*/
   height: 500px;
 }
 
