--- a/views/recomms_personal.haml
+++ b/views/recomms_personal.haml
@@ -35,7 +35,21 @@
               %a{ :href => "games/#{n_game['appid']}" }= n_game['score']
 
       %hr
-
+  .row
+    .col-md-1
+    .col-md-10
+      :erb
+        <script type="text/javascript"><!-- 
+        google_ad_client = "ca-pub-5053630439831931"; 
+        /* Games */ 
+        google_ad_slot = "6861504808"; 
+        google_ad_width = 728; 
+        google_ad_height = 90; 
+        //-->
+        </script>
+        <script type="text/javascript"
+        src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+        </script>
   .row
     .col-md-1
     .col-md-10
