--- a/views/index.haml
+++ b/views/index.haml
@@ -65,7 +65,6 @@
         and you may find something new.
       %p
         %a.btn{ "href" => "genres/31"}View details &raquo;
-
   .row
     .col-md-1
     .col-md-10
@@ -74,3 +73,17 @@
 %script{ :src => "../js/jquery-1.10.2.min.js" }
 %script{ :src => "../js/bootstrap.js" }
 %script{ :src => "../js/holder.js" }
+
+:plain
+  <script type="text/javascript"><!-- 
+  google_ad_client = "ca-pub-5053630439831931"; 
+  /* Games */ 
+  google_ad_slot = "6861504808"; 
+  google_ad_width = 728; 
+  google_ad_height = 90; 
+  //-->
+  </script>
+  <script type="text/javascript"
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
+  
