--- a/views/recomms_personal.haml
+++ b/views/recomms_personal.haml
@@ -71,8 +71,8 @@
       %script{ :type => "text/javascript" }
         :plain
           google_ad_client = "ca-pub-5053630439831931"; 
-          /* Games */ 
-          google_ad_slot = "6861504808"; 
+          /* bottom-banner */ 
+          google_ad_slot = "3313792403"; 
           google_ad_width = 728; 
           google_ad_height = 90; 
       %script{ :type => "text/javascript", :src => "http://pagead2.googlesyndication.com/pagead/show_ads.js" }
