trying out cdata

--- a/views/recomms_personal.haml
+++ b/views/recomms_personal.haml
@@ -69,7 +69,7 @@
     .col-md-1
     .col-md-10
       %script{ :type => "text/javascript" }
-        :plain
+        :cdata
           google_ad_client = "ca-pub-5053630439831931"; 
           /* bottom-banner */ 
           google_ad_slot = "3313792403"; 
