--- a/views/recomms_personal.haml
+++ b/views/recomms_personal.haml
@@ -68,13 +68,7 @@
   .row
     .col-md-1
     .col-md-10
-      %script{ :type => "text/javascript" }
-        :cdata
-          google_ad_client = "ca-pub-5053630439831931"; 
-          /* bottom-banner */ 
-          google_ad_slot = "3313792403"; 
-          google_ad_width = 728; 
-          google_ad_height = 90; 
+      = google_ad()
       %script{ :type => "text/javascript", :src => "http://pagead2.googlesyndication.com/pagead/show_ads.js" }
   .row
     .col-md-1
