--- a/views/recomms_personal.haml
+++ b/views/recomms_personal.haml
@@ -68,8 +68,9 @@
   .row
     .col-md-1
     .col-md-10
-      = google_ad()
-      %script{ :type => "text/javascript", :src => "http://pagead2.googlesyndication.com/pagead/show_ads.js" }
+      %center
+        = google_ad()
+        %script{ :type => "text/javascript", :src => "http://pagead2.googlesyndication.com/pagead/show_ads.js" }
   .row
     .col-md-1
     .col-md-10
