updated website url

--- a/views/about.haml
+++ b/views/about.haml
@@ -6,7 +6,7 @@
         About Me!
 
       %h3
-        %a{ :href => 'www.wesley-kerr.com' }
+        %a{ :href => 'http://www.wesley-kerr.com' }
           Wesley Kerr
       %p
         Steam Recommender is a side project that I have wanted to do for a long time.  
