--- a/views/games.haml
+++ b/views/games.haml
@@ -21,14 +21,14 @@
           %a{ :href => "games?order=total_playtime" }
             %strong Total
         .col-md-1.text-right{ :title => "Sort by the total average playtime" }
-          %a{ :href => "games?order=total_mean" }
-            %strong Avg
+          %a{ :href => "games?order=total_median" }
+            %strong Median
         .col-md-1.text-right{ :title => "Sort by recent playtime" }
           %a{ :href => "games?order=recent_playtime" }
             %strong Total
         .col-md-1.text-right{ :title => "Sort by recent average playtime" }
-          %a{ :href => "games?order=recent_mean" }
-            %strong Avg
+          %a{ :href => "games?order=recent_median" }
+            %strong Median
       - @games.each do |game|
         .row
           .col-md-2
@@ -40,11 +40,11 @@
           .col-md-1.text-right
             = '%.0f' % game.total_playtime if game.total_playtime
           .col-md-1.text-right
-            = '%.0f' % game.total_mean if game.total_mean
+            = '%.0f' % game.total_median if game.total_median
           .col-md-1.text-right
             = '%.0f' % game.recent_playtime if game.recent_playtime
           .col-md-1.text-right
-            = '%.0f' % game.recent_mean if game.recent_mean
+            = '%.0f' % game.recent_median if game.recent_median
         %hr
 
       .flickr_pagination
