--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -13,7 +13,7 @@
 
 <div class="container marketing">
   <div class="row">
-    <div class="col-md-4">
+    <div class="span4">
       <center>
       <img class="img-circle" src="img/payday2.png">
       <h2>FPS</h2>
@@ -25,7 +25,7 @@
         <a class="btn" href="genres/25">View details &raquo;</a>
       </p>
     </div>
-    <div class="col-md-4">
+    <div class="span4">
       <center>
       <img class="img-circle" src="img/baldurs-gate.png"> 
       <h2>RPG</h2>
@@ -37,7 +37,7 @@
         <a class="btn" href="genres/7">View details &raquo;</a>
       </p>
     </div>
-    <div class="col-md-4">
+    <div class="span4">
       <center>
       <img class="img-circle" src="img/starcraft2.png"> 
       <h2>RTS</h2>
