--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -1,4 +1,20 @@
 
 <div>
+  <div class="row">
+    <div class="span1"></div>
+    <div class="span8">
+      <center>
+        <h2>User Profile</h2>
+      </center>
+    </div>
+  </div>
 
+  <div ng-repeat="game in currentData">
+    <div class="row">
+      <div class="span2">
+        <a ng-href="games/{{game.appid}}">
+          <img ng-src={{game.steam_img_url}} width="150px" title="{{game.title}}" />
+        </a>
+    </div>
+  </div>
 </div>
